# DatacleanAir

./: README.txt  pyproject.toml  setup.py
DatacleanAir/: __init__.py  filters.py  outliers.py  qc.py  utils.py
test/: test_filters.py  test_outliers.py
